--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JuaCo TGC</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
+    <div id="contenedor">
+        
+        <header>
+                <img src="img/Logo_Inicio.jpg" alt="logo">
+        </header>
+
+        <nav>
+            <ul class="nav">
+                <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/Index.html">Home</a></li>
+                <li>
+                    <a href="">Colecciones</a>
+                    <ul>
+                        <li><a href="">Pokemon</a></li>
+                        <li><a href="">Yu-Gi-Oh</a></li>
+                        <li><a href="">Digimon</a></li>
+                        <li><a href="">One Piece</a></li>
+                    </ul>
+                </li>
+                <li><a href="">Sobre Nosotros</a></li>
+                <li><a href="">Areas de Actuación</a></li>
+                <li><a href="">Noticias</a></li>
+                <li><a href="">Publicaciones</a></li>
+                <li><a href="">Localización</a></li>
+                <li><a href="">Contacto</a></li>
+            </ul>
+        </nav>
     
+    </div>
 </body>
 </html>
