--- a/Index.html
+++ b/Index.html
@@ -17,20 +17,19 @@
             <ul class="nav">
                 <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/Index.html">Home</a></li>
                 <li>
-                    <a href="">Colecciones</a>
+                    <a href="#">Colecciones</a>
                     <ul>
-                        <li><a href="">Pokemon</a></li>
+                        <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/PokeFlip.html">Pokemon</a></li>
                         <li><a href="">Yu-Gi-Oh</a></li>
                         <li><a href="">Digimon</a></li>
                         <li><a href="">One Piece</a></li>
                     </ul>
                 </li>
-                <li><a href="">Sobre Nosotros</a></li>
-                <li><a href="">Areas de Actuación</a></li>
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Publicaciones</a></li>
-                <li><a href="">Localización</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/QuienesSomos.html">Quienes Somos</a></li>
+                <li><a href="#">Noticias</a></li>
+                <li><a href="#">Publicaciones</a></li>
+                <li><a href="#">Localización</a></li>
+                <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     
