--- a/Index.html
+++ b/Index.html
@@ -20,9 +20,9 @@
                     <a href="#">Colecciones</a>
                     <ul>
                         <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/PokeFlip.html">Pokemon</a></li>
-                        <li><a href="">Yu-Gi-Oh</a></li>
-                        <li><a href="">Digimon</a></li>
-                        <li><a href="">One Piece</a></li>
+                        <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/YuFlip.html">Yu-Gi-Oh</a></li>
+                        <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/DigiFlip.html">Digimon</a></li>
+                        <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/OneFlip.html">One Piece</a></li>
                     </ul>
                 </li>
                 <li><a href="file:///C:/Users/Corra/Desktop/VS%20Code/Pokemon/QuienesSomos.html">Quienes Somos</a></li>
