--- a/OneFlip.html
+++ b/OneFlip.html
@@ -25,20 +25,14 @@
     <div class="card">
         
         <div class="face front">
-            <img src="img/ETB.jpeg">
-            <h3>ETB Juntos de Aventuras</h3>
+            <img src="img/OnePieceRomanceDown.jpg">
+            <h3>Booster Box 32 sobres Romance Down</h3>
         </div>
         
         <div class="face back">
             <h3>Descripcion</h3>
             <p>Este lote contiene:<br>
-                9 Sobres del set SV9,<br>
-                1 Carta Promocional,<br>
-                65 Fundas para Cartas,<br>
-                1 Guía del Jugador y referencia de reglas
-                Contadores, monedas y marcadores de daño,<br> 
-                y <br>
-                1 Caja del Coleccionista con Separadores.</p>
+                32 Sobre set Romance Down.</p>
             <div class="link">Precio: 60€  <a href="#">Comprar</a></div>
         </div>
     </div>
@@ -46,14 +40,14 @@
     <div class="card">
 
         <div class="face front">
-            <img src="img/pokemon 151.jpeg">
-            <h3>Lote 36 sobres Coleccion 151</h3>
+            <img src="img/OnePiece500años.jpg">
+            <h3>Sobre One Piece 500 años en el Futuro</h3>
         </div>
 
         <div class="face back">
             <h3>Descripcion</h3>
             <p>Este lote contiene:<br>
-                20 sobres con 7 cartas cada uno.</p>
+                1 Sobre set, 500 años en el futuro.</p>
             <div class="link">Precio: 165€ <a href="">Comprar</a></div>
         </div>
     </div>
@@ -61,14 +55,14 @@
     <div class="card">
 
         <div class="face front">
-            <img src="img/BBPokemon.jpeg">
-            <h3>Booster Boundle Prismatic Eevolutions</h3>
+            <img src="img/OnePieceSevenWarrios.jpg">
+            <h3>Booster Box Seven Warriors in the Sea</h3>
         </div>
 
         <div class="face back">
             <h3>Descripcion</h3>
             <p>Este lote contiene:<br>
-                Seis sobres de refuerzo de Scarlet & Violet—Evoluciones Prismaticas.</p>
+                32 Sobres set, Seven Warriors in the Sea.</p>
             <div class="link">Precio: 40€ <a href="#">Comprar</a></div>
         </div>
 
@@ -77,19 +71,14 @@
     <div class="card">
 
         <div class="face front">
-            <img src="img/maletinPokemonSS.jpeg">
-            <h3>Maletin Surging Sparks</h3>
+            <img src="img/OnePieceOP-K5.jpg">
+            <h3>Booster Bundle OPK-05</h3>
         </div>
 
         <div class="face back">
             <h3>Descripcion</h3>
             <p>Este lote contiene:
-            6 paquetes de mejora adicionales de JCC Pokémon<br>
-            3 cartas promocionales de Pikachu, Dipplin y Ogerpon<br>
-            Una moneda Pokémon de Terapagos<br>  
-            Una mini álbum para guardar tus tarjetas favoritas<br>
-            Una tarjeta de código para Pokémon TCG Live<br>
-            4 hojas de pegatinas de colores<br>
+            16 Sobres set, OPK-05.
             </p>
             <div class="link">Precio: 40€ <a href="#">Comprar</a></div>
         </div>
