Correccion de todos los flip

--- a/DigiFlip.html
+++ b/DigiFlip.html
@@ -21,7 +21,7 @@
             </header>
         
         </div>
-    <div class="contenedorCards">
+    <div class="contenedorCard">
         <div class="card">
             
             <div class="face front">
