--- a/PokeFlip.html
+++ b/PokeFlip.html
@@ -21,7 +21,7 @@
             </header>
     
    </div>
-
+<div class="contenedorCard">
     <div class="card">
         
         <div class="face front">
@@ -93,6 +93,7 @@
             </p>
             <div class="link">Precio: 40€ <a href="#">Comprar</a></div>
         </div>
+    </div>
     </div>
 </body>
 
