--- a/YuFlip.html
+++ b/YuFlip.html
@@ -21,7 +21,7 @@
             </header>
     
    </div>
-
+   <div class="contenedorCard">
     <div class="card">
         
         <div class="face front">
@@ -90,6 +90,7 @@
             3 Ultra Rare Token Cards.</p>
             <div class="link">Precio: 36,61€ <a href="#">Comprar</a></div>
         </div>
+    </div>
     </div>
 </body>
 
